<resources>
    <string name="app_name">Rest Commerce</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="appversion">1.4</string>
    <string name="about">We are the leading IT consulting company
        in india having expertise in providing SAAS
        &amp; SAAP solutions, corporate branding, UI/UX designing,
        E-commerce and portal development, Android &amp; IOS mobile
        apps development, and customized ERP software solutions. We
        encourage innovation and experimentation with fresh ideas, while
        considering the clients’ requirements at the same time.
        \n\nWith an experience of more than a decade, we have
        served more than 500 clients worldwide and have executed
        more than 800 projects. We have already worked with different
        brands &amp; served small, medium and large enterprises and empowered
        them to reach at greater heights. We provide business solutions faster
        than our competitors and help our clients monetize more effectively.
        \n\nOur past work, constant feedback attitude and remarkable success
        records has set us aside from other IT consulting corporations. We
        offer end-to-end complete IT solutions that leverages growth of a micro,
        mini, medium or large enterprises. We believe in empowering every sector
        with agile digitalization and hence we collaborate with them as a strategic
        partner and help them to achieve highest performance in their business as a
        whole. We make sure to leave no stone unturned to ensure client satisfaction &amp;
        serve them with the best and optimized solutions.

    </string>
    <string name="about2">
    Contact us:<font color='#5e5bf0'>info@antsglobe.com</font>
    </string>
    <string name="Tnc1">
        This website is operated by Antsglobe Technologies LLP. Throughout the site, the terms “we”, “us” and “our” refer to Antsglobe.
        Antsglobe offers this website, including all information, tools and services available from this site to you, the user, conditioned
        upon your acceptance of all terms, conditions, policies and notices stated here. By accessing and using this Web Site you agree to
        be bound by the following Terms of Use and all terms and conditions contained and/or referenced herein or any additional terms and
        conditions set forth on this Web
        Site and all such terms shall be deemed accepted by you. If you do NOT agree to all these Terms of Use, you should NOT use this Web
        Site.
    </string>
    <string name="Tnc2">
        These Terms of Use may be amended by Antsglobe at any time. Such amended Terms of Use shall be effective upon posting on this Web
        Site. Please check
        the Terms of Use published on this Web Site regularly to ensure that you are aware of all terms governing your use of this Web Site.
    </string>
    <string name="Tnc3">Also, specific terms and conditions may apply to specific content, products, materials, services or information contained on or
        available through this Web Site (the "Content") or transactions concluded through this Web Site. Such specific terms may be in
        addition to these Terms of Use or, where inconsistent with these Terms of Use, only to the extent the
        content or intent of such specific terms is inconsistent with these Terms of Use, such specific terms will supersede these Terms
        of Use.
    </string>
    <string name="Tnc4">
        <font color="#000000"><b><medium>1. ONLINE STORE TERMS:</medium></b></font>
        Antsglobe reserves the right to make changes or updates with respect to or in the Content of the Web Site or
        the format thereof at any time without notice. You may not use our products for any illegal or unauthorized purpose nor may you, in
        the use of the Service, violate any laws in your jurisdiction (including but not limited to copyright laws). You must not transmit
        any worms or viruses or
        any code of a destructive nature. A breach or violation of any of the Terms will result in an immediate termination of your Services.
    </string>
    <string name="Tnc5"><font color="#000000"><b><medium>2.ACCURACY, COMPLETENESS AND‎ TIMELI- NESS OF INFORMATION:</medium></b></font>
        Although care has been taken to ensure the accuracy of the information on
        this Web Site, Antsglobe assumes no responsibility for the same. All content is provided as is and as available Any reliance on the
        material on this site is at your own risk. We reserve the right to modify the contents of this site at any time, but
        we have no obligation to update any information on our site. You agree that it is your responsibility to monitor changes to our site.
    </string>
    <string name="Tnc6">
        Under no circumstances Antsglobe or its affiliates be liable for any direct or indirect consequential, punitive or incidental damages
        (including without limitation, damages for loss of business, contract, revenue, data or information) resulting from or arising out of
        or in connection
        with the use or inability to use, of this website and its contents, even if Antsglobe has been advised about the possibility of such
        damages.
    </string>
    <string name="Tnc7"><font color="#000000"><b><medium>3.THIRD-PARTY LINKS:</medium></b></font>
        This website may provide links to other web sites that are not under the control of Antsglobe. We shall not
        in any way be responsible for the content of such other web sites. Such links are provided only as a convenience to the user of
        this website, and the inclusion of any link to any such websites does not imply endorsement by Antsglobe of the content of such
        websites.

    </string>
    <string name="Tnc8"><font color="#000000"><b><medium>4.COPYRIGHT DISCLAIMER:</medium></b></font>
        Copyright and all other proprietary rights in the Content (including but not limited to software, audio,
        video, text and photographs) rest with Antsglobe. All rights in the content not expressly granted herein are reserved. Except as
        otherwise provided, the content published on this website may be reproduced or distributed in unmodified form for personal
        non-commercial use only. Any other use of the content, including without limitation distribution, reproduction, modification,
        display or transmission without the prior written consent of
        Antsglobe is strictly prohibited. All copyright and other proprietary rights shall be retained by Antsglobe on all reproductions.

    </string>
    <string name="Tnc9"><font color="#000000"><b><medium>5.MODIFICATIONS TO THE SERVICE AND PRICES:‎ ‎ ‎ ‎</medium></b></font>Prices for our products are subject to change without notice. We reserve the right
        at any time to modify or discontinue the Service (or any part or content thereof) without notice at any time.
We shall not be liable to you or to any third-party for any modification, price change, suspension or discontinuance of the Service.

    </string>
    <string name="Tnc10"><font color="#000000"><b><medium>6.PRODUCTS OR SERVICES (if applicable):</medium></b></font>
        Certain products or services may be available exclusively online through the website.
        These products or services may have limited quantities and are subject to return or exchange only according to our Return Policy.
        We have made every effort to display as accurately as possible the colours and images of our products that appear at the
        store. We cannot guarantee that your computer monitor\'s display of any colour will be accurate.
        We reserve the right, but are not obligated, to limit the sales of our products or Services to any person,
        geographic region or jurisdiction. We may exercise this right on a case-by-case basis. We reserve the right to
        limit the quantities of any products or services that we offer. All descriptions of products or product pricing
        are subject to change at any time without notice, at the sole discretion of us. We reserve the right to discontinue
        any product at any time. Any offer for any product or service made on this site is void where prohibited. We do not
        warrant that the quality of any products, services, information, or other material purchased or obtained by you will
        meet your expectations, or that any errors in the Service will be corrected.

    </string>
    <string name="Tnc11"><font color="#000000"><b><medium>7.GENERAL CONDITIONS:</medium></b></font>
        We reserve the right to refuse service to anyone for any reason at any time. You understand that your
        content (not including credit card information), may be transferred unencrypted and involve (a) transmissions over various
        networks; and (b) changes to conform and adapt to technical requirements of connecting networks or devices. Credit card information
        is always encrypted during transfer over networks. You agree not to reproduce, duplicate, copy, sell, resell or exploit any
        portion of the Service, use of the Service, or access to the Service or any contact on the website through which the service
        is provided, without express written permission
        by us. The headings used in this agreement are included for convenience only and will not limit or otherwise affect these Terms.

    </string>
    <string name="Tnc12"><font color="#000000"><b><medium>8.PERSONAL INFORMATION:</medium></b></font>
         Your submission of personal information through the store is governed by our Privacy Policy.
        To view our Privacy Policy. Personal information provided or collected
        through or in connection with this website shall only be used in accordance with the Privacy Policy adopted by Antsglobe.

    </string>
    <string name="Tnc13"><font color='#5e5bf0'>info@antsglobe.com</font></string>
    <string name="Tnc14"><font color="#000000"><b><medium>9.CONTACT INFORMATION:</medium></b></font>
    Questions about the Terms of Service Contact us at:</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="policies">Policies</string>
    <string name="about_us">About Us</string>
    <string name="language">Select Language</string>
</resources>