<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Tnc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.Tnc">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orange">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView

            android:id="@+id/logoImageHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Terms and Conditions"
            android:textColor="@color/white"
            android:textSize="22dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <ScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical">


                <TextView

                    android:id="@+id/t1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="start|end"
                    android:justificationMode="inter_word"
                    android:text="@string/Tnc1"
                    android:textColor="@color/black" />

                <TextView

                    android:id="@+id/t2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|end"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:justificationMode="inter_word"
                    android:text="@string/Tnc2"
                    android:textColor="@color/black" />

                <TextView

                    android:id="@+id/t3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:justificationMode="inter_word"
                    android:text="@string/Tnc3"
                    android:textColor="@color/black" />

                <TextView

                    android:id="@+id/t4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:justificationMode="inter_word"
                    android:text="@string/Tnc4"
                    android:textColor="@color/black" />

                <TextView

                    android:id="@+id/t5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:justificationMode="inter_word"
                    android:text="@string/Tnc5"
                    android:textColor="@color/black" />

                <TextView

                    android:id="@+id/t6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:justificationMode="inter_word"
                    android:text="@string/Tnc6"
                    android:textColor="@color/black" />

                <TextView

                    android:id="@+id/t7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:justificationMode="inter_word"
                    android:text="@string/Tnc7"
                    android:textColor="@color/black" />

                <TextView

                    android:id="@+id/t8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:justificationMode="inter_word"
                    android:text="@string/Tnc8"
                    android:textColor="@color/black" />

                <TextView

                    android:id="@+id/t9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:justificationMode="inter_word"
                    android:text="@string/Tnc9"
                    android:textColor="@color/black" />

                <TextView

                    android:id="@+id/t10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:justificationMode="inter_word"
                    android:text="@string/Tnc10"
                    android:textColor="@color/black" />

                <TextView

                    android:id="@+id/t11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:justificationMode="inter_word"
                    android:text="@string/Tnc11"
                    android:textColor="@color/black" />

                <TextView

                    android:id="@+id/t13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:justificationMode="inter_word"
                    android:text="@string/Tnc12"
                    android:textColor="@color/black" />

                <TextView

                    android:id="@+id/t14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:gravity="left"
                    android:justificationMode="inter_word"
                    android:text="@string/Tnc14"
                    android:textColor="@color/black" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:justificationMode="inter_word"
                    android:text="@string/Tnc13"
                    android:textColor="@color/black" />


            </LinearLayout>


        </ScrollView>

    </LinearLayout>


</LinearLayout>