<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/SCREEN"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        style="@style/SCREEN"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/BusinessSettingsTB"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/orange"
            android:elevation="3dp"
            android:gravity="start"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/logoImageHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginEnd="30dp"
                android:text="Settings"

                android:textColor="@color/white"
                android:textSize="22dp"
                android:textStyle="bold" />
        </LinearLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/BusinessSettingsTB"
            android:layout_marginTop="40dp"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:scrollbars="none">


            <LinearLayout
                android:id="@+id/ll_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="18dp"
                    android:weightSum="2">

                    <TextView
                        style="@style/TEXT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/dark_mode" />


                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/sc_dark_mode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.7"
                        android:checked="false"
                        android:theme="@style/Color1SwitchStyle" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/background_card" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="15dp"
                    android:layout_marginTop="10dp"
                    android:weightSum="2">


                    <TextView
                        style="@style/TEXT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:text="@string/language"

                        />


                    <TextView
                        android:id="@+id/tv_language"
                        style="@style/TEXT"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.6"
                        android:gravity="center"

                        android:text="change" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="12dp"
                    android:background="@color/background_card" />

                <LinearLayout
                    android:id="@+id/ll_policies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="15dp"
                    android:layout_marginTop="10dp"
                    android:weightSum="2">


                    <TextView
                        style="@style/TEXT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:text="@string/policies"

                        />


                    <ImageView
                        android:id="@+id/iv_change_pin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.6"
                        android:paddingHorizontal="18dp"
                        android:src="@drawable/arrow_back" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="12dp"
                    android:background="@color/background_card" />

                <LinearLayout
                    android:id="@+id/about_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="15dp"
                    android:layout_marginTop="10dp"
                    android:weightSum="2">


                    <TextView
                        style="@style/TEXT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:text="@string/about_us"

                        />


                    <ImageView
                        android:id="@+id/iv_change_pin2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.6"
                        android:paddingHorizontal="18dp"
                        android:src="@drawable/arrow_back" />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="12dp"
                    android:background="@color/background_card" />

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>